--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/image 95_layerstyle.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>precise-page-forge</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>TrackFlow</title>
+    <meta name="description" content="Make each site visit as personal as a sales call" />
+    <meta name="author" content="TrackFlow" />
 
-    <meta property="og:title" content="precise-page-forge" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="TrackFlow" />
+    <meta property="og:description" content="Make each site visit as personal as a sales call" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/image 95_layerstyle.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="TrackFlow" />
+    <meta name="twitter:description" content="Make each site visit as personal as a sales call" />
+    <meta name="twitter:image" content="/image 95_layerstyle.svg" />
   </head>
 
   <body>
